improved display of buttons, texts, prevented overflow-x, implemented user image loading from avatar, improved contrast in mobile view

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -5,7 +5,7 @@
   text-align: center;
 
   font-weight: bold;
-  color: cornflowerblue;
+  color: #c79d4c; // MU :modified (was: cornflowerblue)
 }
 
 .RecastApp {
