--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -5,7 +5,7 @@
   // height: 60px;
 
   padding: 1rem;
-  color: #9e9fa3;
+  color: #6f7076;
   background: white;
   border-top: 1px solid #c79d4c; // MU: added
   //box-shadow: 0 5px 40px rgba(0, 0, 0, 0.16); // MU: modified (was 0.16) and commented
