--- a/src/components/Live/style.scss
+++ b/src/components/Live/style.scss
@@ -11,6 +11,7 @@
   &--message-container {
     flex-grow: 1;
     padding-bottom: 25px;
+    overflow-x: hidden; // MU: added
   }
 }
 
