--- a/src/components/Message/style.scss
+++ b/src/components/Message/style.scss
@@ -18,6 +18,8 @@
   width: -moz-fit-content;
   position: relative;
   line-height: 160%; // MU: modified
+  flex-grow: 1; // MU:added
+  // flex: 0 0 100%; // MU: added
 
   &--logo {
     width: 35px;
@@ -75,7 +77,7 @@
 
   .RecastAppSlider,
   .Slider {
-    max-width: 300px;
+    max-width: 430px; // MU: modified (was: 300px)
 
     .Arrow {
       width: 25px;
@@ -126,7 +128,7 @@
    */
 
   .RecastAppText {
-    max-width: 100%; // MU: modified (was 270px)
+    max-width: 400px; // MU: modified (was: 270px)
     padding: 1.5rem; // MU: modified (was 0.8rem)
     border-radius: 3px;
 
@@ -139,7 +141,7 @@
    */
 
   .RecastAppPicture {
-    width: 270px;
+    max-width: 400px; // MU: modified (was: 270px)
     max-height: 270px;
 
     border-radius: 3px;
@@ -156,7 +158,7 @@
 
     &--slider {
       margin-top: 0.5rem;
-      max-width: 290px;
+      max-width: 420px; // MU: modified (was: 290px)
     }
 
     &--button {
@@ -178,13 +180,14 @@
    * Buttons
    */
   .Buttons {
-    width: 270px;
+    max-width: 400px; // MU: modified (was: 270px)
+    width: 90%; // MU: added
     border: 1px solid lightgrey;
     border-radius: 3px;
 
     &--title {
-      max-width: 270px;
-      padding: 0.8rem;
+      max-width: 400px; // MU: modified (was: 270px)
+      padding: 1.5rem; // MU: modified (was 0.8rem)
       border-top-left-radius: 3px;
       border-top-right-radius: 3px;
 
@@ -193,6 +196,7 @@
     }
 
     &--container {
+      max-width: 400px; // MU: modified (was: 270px)
       border-top: 1px solid lightgrey;
     }
   }
@@ -283,7 +287,7 @@
         cursor: pointer;
         font-size: 14px;
         font-weight: bold;
-        color: cornflowerblue;
+        color: #c79d4c; // MU: modified (was cornflowerblue)
         text-decoration: none;
       }
     }
